--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,23 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE
+*.settings
+*.project
+*.classpath
+*.springBeans
+*.idea/
+*.iml
+*.flattened-pom.xml
+
+*-buildlog.txt
+*.launch
+
+# Ignore all .gitignores except this one
+*.gitignore
+!/.gitignore
+
+# target and bin folders
+/target/
+/bin/
